# sem3

./: .gitignore  README.md
cvm/lab6/: 00.c  00.objdump  00.s  00_annotated.objdump  01.c  01.objdump  01.s  01_annotated.objdump  Makefile
cvm/lab7/: 00.c  00.objdump  00_annotated.objdump  Makefile
diskra/GrayCode/: CMakeLists.txt
diskra/GrayCode/include/: Exceptions.h  Multiset.h  MultisetArithmetic.h  UIHandler.h
diskra/GrayCode/src/: IO.cc  Multiset_Fill.cc  Multiset_Operators.cc  main.cc
diskra/courseWork/: CMakeLists.txt  config.yaml  requirements.txt
diskra/courseWork/GUI/: GUI_config.yaml  gui_builder.py  main.py  test_module.py
diskra/courseWork/config/: core.yaml  gui.yaml
diskra/courseWork/core/: config.yaml  core_config.yaml  py_binding.cc  test.cc
diskra/courseWork/core/include/: BigRingArithmetic.h  DivisionResult.h  FiniteField.h  FiniteFieldRules.h  FiniteRingRules.h  RingNumber.h  SmallRingArithmetic.h
diskra/courseWork/core/src/: BigRingArithmetic.cc  FiniteField.cc  FiniteFieldRules.cc  FiniteRingRules.cc  RingNumber.cc  SmallRingArithmetic.cc  utils.cc
diskra/courseWork/python/: calculator.py  char.py  generate_tables.py  gui_builder.py  main.py
diskra/courseWork/tests/: ctest.cc  gtest.cc  test_c++_module.py  test_handle.py  test_ring_number.cc  test_small_arithmetic.cc
diskra/exam/: settings.tex
diskra/exam/quests/: 1.tex  10.tex  13.tex  14.tex  4.tex  7.tex
diskra/lab1 - gray's code/: CMakeLists.txt  quest.md
diskra/lab1 - gray's code/include/: Core.h  Multiset.h  UIHandler.h
diskra/lab1 - gray's code/src/: Core.cc  IO.cc  Multiset_Fill.cc  Multiset_Helpers.cc  Multiset_Operators.cc  UIHandler.cc
diskra/lab2/: CMakeLists.txt
diskra/lab2/include/: bdd.h  config.h  help.h  ui.h  zheg.h
diskra/lab2/src/: bdd.cpp  help.cpp  main.cpp  ui.cpp  zheg.cpp
dismath/GrayCode/include/: IO.h  Multiset.h
dismath/GrayCode/src/: Core.cc  MultisetArithmetic.cc  Multiset_Fill.cc  UIHandler.cc
dismath/courseWork/: CMakeLists.txt
dismath/courseWork/core/include/: BigRingArithmetic.h  RingNumber.h
dismath/courseWork/core/src/: BigRingArithmetic.cc  FiniteRingRules.cc  SmallRingArithmetic.cc
dismath/courseWork/tests/: test_big_arithmetic.cc
dismath/exam/: main.tex
dismath/exam/quests/: 11.tex  12.tex  2.tex  3.tex  5.tex  6.tex  8.tex  9.tex
oop/lab1/: func.cpp  func.hpp  lab1.cpp
oop/lab2/: Makefile
oop/lab2/include/: Circle.h  MyString.h  MyVector.h  Rect.h  Shape.h  stdafx.h
oop/lab2/src/: Circle.cc  Lab2.cpp  MyString.cpp  MyVector.cpp  Rect.cc  Shape.cc
oop/lab3/: Makefile
oop/lab3/include/: MyStack.h  func.h
oop/lab3/src/: lab3.cpp
oop/lab3/tpl/: MyStack.tpp  func.tpp
oop/lab4/: Makefile
oop/lab4/include/: func.hpp
oop/lab4/src/: func.cc  lab4.cpp
oop/lab4/tpl/: func.tpp
oop/lab5/: CmakeLists.txt  main.cc
oop/lab6/: CmakeLists.txt  MyWidgetCollection.cc  MyWidgetCollection.hpp  main.cc  quest.md
oop/lab7/: CmakeLists.txt  quest.md
oop/lab7/7.1/core/include/: Triag.h
oop/lab7/7.1/ui/include/: MainWindow.h
oop/lab7/7.1/ui/src/: FiguresWidget.cc
oop/lab7/7.2/: CMakeLists.txt
oop/lab7/7.2/core/include/: EllipseItem.h  RectItem.h  TriagItem.h
oop/lab7/7.2/core/src/: EllipseItem.cc  RectItem.cc  TriagItem.cc
oop/lab7/7.2/ui/include/: FiguresScene.h  MainWindow.h
oop/lab7/7.2/ui/src/: FiguresScene.cc  MainWindow.cc
oop/lab7/core/include/: Ellipse.h  Figure.h  Rect.h  Triag.h
oop/lab7/core/src/: Ellipse.cc  Rect.cc  Triag.cc
oop/lab7/ui/include/: FiguresWidget.h  MainWindow.h
oop/lab7/ui/src/: FiguresWidget.cc  MainWindow.cc
oop/lab8/: CmakeLists.txt  main.cc  quest.md
oop/lab8/core/include/: Contact.h  ContactManager.h  ContactTableModel.h  Validator.h
oop/lab8/core/src/: ContactManager.cc  ContactTableModel.cc  Validator.cc
oop/lab8/data/: 1st.json  2.json  2st.json  contacts.json  mathematics.json
oop/lab8/ui/include/: MainWindow.h
oop/lab8/ui/src/: MainWindow.cc  MainWindowLogic.cc  MainWindowUI.cc
oop/lab9/: CMakeLists.txt  README.md  main.cc
oop/lab9/.github/: copilot-instructions.md
oop/lab9/include/domain/: shape.h  shape_factory.h  shape_types.h
oop/lab9/include/infrastructure/: database_manager.h  shape_repository.h
oop/lab9/include/presentation/: graphics_view.h  main_window.h  shape_delegate.h  shape_model.h
oop/lab9/src/domain/: shape.cc  shape_factory.cc  shape_types.cc
oop/lab9/src/infrastructure/: database_manager.cc  shape_repository.cc
oop/lab9/src/presentation/: graphics_view.cc  main_window.cc  shape_delegate.cc  shape_model.cc
